# ml_workspace

./: .gitignore  VERSIONS.md  requirements.txt
perceptron/: CMakeLists.txt
perceptron/include/: perceptron.hpp
perceptron/python/: example.py  main.py  perceptron_wrapper.py
perceptron/python/data/: sonar.csv  wdbc.csv
perceptron/src/: bindings.cpp  perceptron.cpp
